Bug 1127588 - Fix the DOMNodeRemoved mutation event isn't fired when updating document.title; r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D2774

--HG--
extra : moz-landing-system : lando